# nufia_ai_africa_camp

./: README.md  SETUP.md  my_agent_data.db  pyproject.toml  requirements.txt
demo_0/: agent.py
demo_mcp/: agent.py
demo_memory_cli/: main.py  utils.py
demo_memory_cli/memory_agent/: agent.py
demo_multi_agent/: agent.py
demo_session_cli/: basic_stateful_session.py
demo_session_cli/questions/: agent.py
demo_session_memoire/: agent.py
demo_tools/: agent.py
demo_workflow_parallel/: agent.py  sub_agent.py
